# Clovers

./: CHANGELOG.md  Cargo.toml  DEVELOPER_SETUP.md  MIGRATION.md  README.md  SECURITY.md  TESTING.md
.github/workflows/: benchmark.yml  ci.yml
Clover-Api/: .env.example  app.ts  index.ts  package-lock.json  package.json  tsconfig.json
Clover-Web/: tsconfig.tsbuildinfo
Clover-Web/app/: globals.css  layout.tsx  page.tsx
Clover-Web/components/: cta-section.tsx  cta.tsx  (+9 more)
adr/: ADR-002-open-asset-model.md  ADR-003-admin-and-fee-collector-roles.md  ADR-005-error-handling.md
benchmarks/: index.html
contracts/onboarding-bridge/: Cargo.toml
contracts/onboarding-bridge/benches/: gas_benchmark.rs
contracts/onboarding-bridge/src/: benchmarks.rs  integration_tests.rs  lib.rs  tests.rs  token_e2e_tests.rs
contracts/onboarding-bridge/test_snapshots/tests/: test_accrued_fees_accumulate_across_deposits.1.json  test_accrued_fees_batch_accumulate.1.json  test_accrued_fees_single_deposit.1.json  test_batch_empty.1.json  test_batch_fund_c_addresses.1.json  test_fund_c_address.1.json  test_fund_events.1.json  test_fund_with_zero_fee.1.json  test_fund_without_initialize.1.json  test_initialize.1.json  test_initialize_fee_too_high.1.json  test_query_balance.1.json  test_set_admin.1.json  test_set_fee_bps.1.json  test_set_fee_bps_too_high.1.json  test_set_fee_collector.1.json  test_withdraw_fees.1.json  test_withdraw_fees_decrements_accrued.1.json  test_zero_fee_no_accrued_entry.1.json
relayer/: index.ts
scripts/: compare_benchmarks.sh  deploy.ts
sdk/: package.json
(+22 files in other folders)
