[package]
name = "onboarding-bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22.0.1"

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
